To the End of 2021 (9)

--- a/Translation/item.json
+++ b/Translation/item.json
@@ -5356,7 +5356,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Giáp Xích Nam",
+        "vi":"Giáp Xích - Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5374,7 +5374,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Giáp Xích Nữ",
+        "vi":"Giáp Xích - Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5392,7 +5392,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hỏa Nung Giáp Xích Nam",
+        "vi":"Hỏa Nung Giáp Xích - Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5410,7 +5410,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hoàng Kim Giáp Xích Nam",
+        "vi":"Hoàng Kim Giáp Xích - Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5428,7 +5428,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hỏa Nung Giáp Xích Nữ",
+        "vi":"Hỏa Nung Giáp Xích - Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5446,7 +5446,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hoàng Kim Giáp Xích Nữ",
+        "vi":"Hoàng Kim Giáp Xích - Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5464,7 +5464,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Áo Choàng Đỏ Nam",
+        "vi":"Áo Choàng Đỏ - Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5482,7 +5482,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Áo Choàng Tím Nam",
+        "vi":"Áo Choàng Tím - Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5500,7 +5500,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Áo Choàng Xám Nam",
+        "vi":"Áo Choàng Xám - Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5518,7 +5518,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Áo Thắt Ngang Đỏ Nữ",
+        "vi":"Áo Thắt Ngang Đỏ - Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5536,7 +5536,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Áo Thắt Ngang Tím Nữ",
+        "vi":"Áo Thắt Ngang Tím - Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5554,7 +5554,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Áo Thắt Ngang Xám Nữ",
+        "vi":"Áo Thắt Ngang Xám - Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5572,7 +5572,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bộ Thanh Lịch Nam",
+        "vi":"Bộ Vét-tông - Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5590,7 +5590,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bộ Thanh Lịch Nâu Nam",
+        "vi":"Bộ Vét-tông Nâu - Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5608,7 +5608,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bộ Thanh Lịch Đỏ Nam",
+        "vi":"Bộ Vét-tông Đỏ - Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5626,7 +5626,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đồng Phục Vàng Nữ",
+        "vi":"Đồng Phục Vàng - Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5644,7 +5644,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đồng Phục Cam Nữ",
+        "vi":"Đồng Phục Cam - Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5662,7 +5662,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đồng Phục Trắng Nữ",
+        "vi":"Đồng Phục Trắng - Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5680,7 +5680,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bộ Trang Phục Đen Nam",
+        "vi":"Bộ Trang Phục Đen - Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5698,7 +5698,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bộ Trang Phục Trắng Nam",
+        "vi":"Bộ Trang Phục Trắng - Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5716,7 +5716,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bộ Trang Phục Tím Nam",
+        "vi":"Bộ Trang Phục Tím - Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5734,7 +5734,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Váy Đỏ Nữ",
+        "vi":"Váy Đỏ - Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5752,7 +5752,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Váy Tím Nữ",
+        "vi":"Váy Tím - Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5770,7 +5770,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Váy Cam Nữ",
+        "vi":"Váy Cam - Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6040,7 +6040,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Lam Hiệp Sĩ Giáp Xích Nam",
+        "vi":"Hiệp Sĩ Giáp Xích Lam - Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6058,7 +6058,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tím Hiệp Sĩ Giáp Xích Nam",
+        "vi":"Hiệp Sĩ Giáp Xích Tím - Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6076,7 +6076,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đỏ Hiệp Sĩ Giáp Xích Nam",
+        "vi":"Hiệp Sĩ Giáp Xích Đỏ - Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6094,7 +6094,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Lam Hiệp Sĩ Giáp Xích Nữ",
+        "vi":"Hiệp Sĩ Giáp Xích Lam- Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6112,7 +6112,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tím Hiệp Sĩ Giáp Xích Nữ",
+        "vi":"Hiệp Sĩ Giáp Xích Tím - Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6130,7 +6130,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đỏ Hiệp Sĩ Giáp Xích Nữ",
+        "vi":"Hiệp Sĩ Giáp Xích Đỏ- Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6148,7 +6148,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tang Nam",
+        "vi":"Tang - Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6166,7 +6166,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tang Nữ",
+        "vi":"Tang - Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6184,7 +6184,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhẫn Giả - Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6202,7 +6202,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhẫn Giả - Nữ",
         "ar":"",
         "it":"",
         "pl":"",
