--- a/Translation/general.json
+++ b/Translation/general.json
@@ -838,7 +838,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thủ Lĩnh",
+        "vi":"Thủ Lĩnh Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
