--- a/Translation/item.json
+++ b/Translation/item.json
@@ -550,7 +550,7 @@
         "de":"Erkorenes Schwert",
         "jp":"",
         "pt":"",
-        "vi":"Kiếm Định Mệnh",
+        "vi":"Kiếm Duyên Phận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -748,7 +748,7 @@
         "de":"Erkorener Langbogen",
         "jp":"",
         "pt":"",
-        "vi":"Cung Định Mệnh",
+        "vi":"Cung Duyên Phận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -856,7 +856,7 @@
         "de":"Scharlachroter Zauberstab",
         "jp":"",
         "pt":"",
-        "vi":"Trượng Đỏ",
+        "vi":"Trượng Tử Sắc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -946,7 +946,7 @@
         "de":"Erkorener Zauberstab",
         "jp":"",
         "pt":"",
-        "vi":"Trượng Định Mệnh",
+        "vi":"Trượng Duyên Phận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1000,7 +1000,7 @@
         "de":"Anfänger Hemd",
         "jp":"",
         "pt":"",
-        "vi":"Áo Môn Sinh",
+        "vi":"Sơ Mi Môn Sinh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1018,7 +1018,7 @@
         "de":"Gehärteter Brustpanzer",
         "jp":"",
         "pt":"",
-        "vi":"Áo Da Cứng",
+        "vi":"Vệ Giáp Da Cứng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1036,7 +1036,7 @@
         "de":"Viper Rüstung",
         "jp":"",
         "pt":"",
-        "vi":"Áo Giáp Rắn Độc",
+        "vi":"Ngoại Giáp Độc Xà",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1054,7 +1054,7 @@
         "de":"Nachtschleicher",
         "jp":"",
         "pt":"",
-        "vi":"Áo Giáp Bóng Đêm",
+        "vi":"Tiềm Giáp Dạ Vãn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1072,7 +1072,7 @@
         "de":"Marionettenrüstung",
         "jp":"",
         "pt":"",
-        "vi":"Áo Giáp Bù Nhìn",
+        "vi":"Áo Giáp Quỷ Lỗi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1144,7 +1144,7 @@
         "de":"Erkorene Rüstung",
         "jp":"",
         "pt":"",
-        "vi":"Áo Giáp Định Mệnh",
+        "vi":"Áo Giáp Duyên Phận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1342,7 +1342,7 @@
         "de":"Erkorener Helm",
         "jp":"",
         "pt":"",
-        "vi":"Mũ Định Mệnh",
+        "vi":"Mũ Duyên Phận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1414,7 +1414,7 @@
         "de":"Schönes Siegel",
         "jp":"",
         "pt":"",
-        "vi":"Ấn Nhẵn Ngọt Ngào",
+        "vi":"Phong Nhẫn Ngọt Ngào",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1432,7 +1432,7 @@
         "de":"Gottloses Fingerband",
         "jp":"",
         "pt":"",
-        "vi":"Nhẫn Tà Năng",
+        "vi":"Chỉ Nhẫn Tà Năng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1450,7 +1450,7 @@
         "de":"Strahlender Ring",
         "jp":"",
         "pt":"",
-        "vi":"Nhẫn Ánh Kim",
+        "vi":"Diệu Nhẫn Ánh Kim",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1468,7 +1468,7 @@
         "de":"Geerbtes Siegel",
         "jp":"",
         "pt":"",
-        "vi":"Nhẫn Kế Thừa",
+        "vi":"Ấn Nhẫn Kế Thừa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1540,7 +1540,7 @@
         "de":"Erkorenes Band",
         "jp":"",
         "pt":"",
-        "vi":"Nhẫn Định Mệnh",
+        "vi":"Nhẫn Duyên Phận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1738,7 +1738,7 @@
         "de":"Erkorene Halskette",
         "jp":"",
         "pt":"",
-        "vi":"Dây Chuyền Định Mệnh",
+        "vi":"Dây Chuyền Duyên Phận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1936,7 +1936,7 @@
         "de":"Erkorene Stiefel",
         "jp":"",
         "pt":"",
-        "vi":"Giày Định Mệnh",
+        "vi":"Giày Duyên Phận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2008,7 +2008,7 @@
         "de":"Naga Gürtel",
         "jp":"",
         "pt":"",
-        "vi":"Đai Naga",
+        "vi":"Đai Hải Yêu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2062,7 +2062,7 @@
         "de":"Gürtel des Vipergeistes",
         "jp":"",
         "pt":"",
-        "vi":"Đai Rắn Độc",
+        "vi":"Đai Độc Xà",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2134,7 +2134,7 @@
         "de":"Erkorener Gürtel",
         "jp":"",
         "pt":"",
-        "vi":"Đai Định Mệnh",
+        "vi":"Đai Duyên Phận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2188,7 +2188,7 @@
         "de":"Dicker Umhang",
         "jp":"",
         "pt":"",
-        "vi":"Áo Choàng Da",
+        "vi":"Áo Choàng Da Dày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2242,7 +2242,7 @@
         "de":"Sanfter Umhang",
         "jp":"",
         "pt":"",
-        "vi":"Áo Choàng Cao Quý",
+        "vi":"Áo Choàng Danh Giá",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2332,7 +2332,7 @@
         "de":"Erkorenes Cape",
         "jp":"",
         "pt":"",
-        "vi":"Áo Choàng Định Mệnh",
+        "vi":"Áo Choàng Duyên Phận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2422,7 +2422,7 @@
         "de":"Lilane Handschuhe",
         "jp":"",
         "pt":"",
-        "vi":"Găng Tay Tím",
+        "vi":"Găng Tay Đỏ Gạch",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2530,7 +2530,7 @@
         "de":"Erkorene Handschuhe",
         "jp":"",
         "pt":"",
-        "vi":"Găng Tay Định Mệnh",
+        "vi":"Găng Tay Duyên Phận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6130,7 +6130,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hiệp Sĩ Giáp Xích Đỏ- Nữ",
+        "vi":"Hiệp Sĩ Giáp Xích Đỏ - Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7876,7 +7876,7 @@
         "de":"Große instant Heilflasche",
         "jp":"",
         "pt":"",
-        "vi":"Bình Hồi Máu Chính Tức Thì Lớn",
+        "vi":"Bình Hồi Máu Tức Thì Lớn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9820,7 +9820,7 @@
         "de":"Margaretta Sandwich",
         "jp":"",
         "pt":"",
-        "vi":"Bánh Sandwich Margaretta",
+        "vi":"Bánh Kẹp Margaretta",
         "ar":"",
         "it":"",
         "pl":"",
