--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4552,5 +4552,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "UI.windows.fortify.title":{
+        "en":"Fortify Gear",
+        "fr":"Renforcer l'Équipement",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
