--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4570,5 +4570,59 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "UI.windows.fortify.tab.gear":{
+        "en":"Gear",
+        "fr":"Équipement",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.fortify.tab.wings":{
+        "en":"Wings",
+        "fr":"Ailes",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.fortify.tab.mount":{
+        "en":"Mount",
+        "fr":"Monture",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
