--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4624,5 +4624,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "UI.windows.fortify.success-rate":{
+        "en":"Success Rate: {0}",
+        "fr":"Chance de Succes: {0}",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
