--- a/Translation/item.json
+++ b/Translation/item.json
@@ -10529,6 +10529,96 @@
         "th":"",
         "id":""
     },
+    "item.41019.name":{
+        "en":"Advanced Upgrade Gem [Lv. 1-30]",
+        "fr":"Gemme d'Amélioration avancé [Lv. 1-30]",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41020.name":{
+        "en":"Advanced Upgrade Gem [Lv. 40]",
+        "fr":"Gemme d'Amélioration avancé [Lv. 40]",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41021.name":{
+        "en":"Advanced Upgrade Gem [Lv. 50]",
+        "fr":"Gemme d'Amélioration avancé [Lv. 50]",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41022.name":{
+        "en":"Advanced Upgrade Gem [Lv. 60]",
+        "fr":"Gemme d'Amélioration avancé [Lv. 60]",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.41023.name":{
+        "en":"Advanced Upgrade Gem [Lv. 70-100]",
+        "fr":"Gemme d'Amélioration avancé [Lv. 70-100]",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "craft.levels.primary":{
         "en":"Primary",
         "fr":"Débutant",
