--- a/Translation/item.json
+++ b/Translation/item.json
@@ -5473,7 +5473,7 @@
     },
     "item.5007.name":{
         "en":"Purple Robe M",
-        "fr":"Robe Violette M",
+        "fr":"Robe Violette H",
         "es":"",
         "ch":"",
         "kr":"",
@@ -5581,7 +5581,7 @@
     },
     "item.5013.name":{
         "en":"Brown Jacket M",
-        "fr":"Veste Marron M",
+        "fr":"Veste Marron H",
         "es":"",
         "ch":"",
         "kr":"",
@@ -5689,7 +5689,7 @@
     },
     "item.5019.name":{
         "en":"White Suit M",
-        "fr":"Costume Blanc M",
+        "fr":"Costume Blanc H",
         "es":"",
         "ch":"",
         "kr":"",
@@ -6067,7 +6067,7 @@
     },
     "item.5040.name":{
         "en":"Red Knight Chain Mail M",
-        "fr":"Armure de chevalier Rouge M",
+        "fr":"Armure de chevalier Rouge H",
         "es":"",
         "ch":"",
         "kr":"",
@@ -6139,7 +6139,7 @@
     },
     "item.5044.name":{
         "en":"Tang M",
-        "fr":"Tang M",
+        "fr":"Tang H",
         "es":"",
         "ch":"",
         "kr":"",
@@ -6175,7 +6175,7 @@
     },
     "item.5046.name":{
         "en":"Ninja M",
-        "fr":"Ninja M",
+        "fr":"Ninja H",
         "es":"",
         "ch":"",
         "kr":"",
@@ -7075,7 +7075,7 @@
 	},
 	"item.6048.name": {
 		"en": "Center Part (Black)",
-		"fr": "",
+		"fr": "Raie Centrale (Noir)",
 		"es": "",
 		"ch": "",
 		"kr": "",
@@ -7093,7 +7093,7 @@
 	},
 	"item.6049.name": {
 		"en": "Center Part (Red)",
-		"fr": "",
+		"fr": "Raie Centrale (Rouge)",
 		"es": "",
 		"ch": "",
 		"kr": "",
@@ -7219,7 +7219,7 @@
 	},
 	"item.6056.name": {
 		"en": "Pompon (Blond)",
-		"fr": "",
+		"fr": "Pompon (Blond)",
 		"es": "",
 		"ch": "",
 		"kr": "",
@@ -7237,7 +7237,7 @@
 	},
 	"item.6057.name": {
 		"en": "Pompon (Green)",
-		"fr": "",
+		"fr": "Pompon (Vert)",
 		"es": "",
 		"ch": "",
 		"kr": "",
@@ -7417,7 +7417,7 @@
 	},
 	"item.6067.name": {
 		"en": "NONAME",
-		"fr": "",
+		"fr": "Sans nom",
 		"es": "",
 		"ch": "",
 		"kr": "",
@@ -7435,7 +7435,7 @@
 	},
 	"item.6068.name": {
 		"en": "NONAME",
-		"fr": "",
+		"fr": "Sans nom",
 		"es": "",
 		"ch": "",
 		"kr": "",
@@ -7453,7 +7453,7 @@
 	},
 	"item.6069.name": {
 		"en": "NONAME",
-		"fr": "",
+		"fr": "Sans nom",
 		"es": "",
 		"ch": "",
 		"kr": "",
@@ -7471,7 +7471,7 @@
 	},
 	"item.6070.name": {
 		"en": "NONAME",
-		"fr": "",
+		"fr": "Sans nom",
 		"es": "",
 		"ch": "",
 		"kr": "",
