To the end of 2021 (9)

--- a/Translation/item.json
+++ b/Translation/item.json
@@ -8686,7 +8686,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trái Tim Hoại Tử",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8704,7 +8704,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[D]Mảnh Mục Rữa",
+        "vi":"[D]Mảnh Kim Loại Mục Rữa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8722,7 +8722,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[D]Mảnh Linh Thiêng",
+        "vi":"[D]Mảnh Kim Loại Linh Thiêng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8740,7 +8740,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[C]Mảnh Linh Thiêng",
+        "vi":"[C]Mảnh Kim Loại Linh Thiêng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8758,7 +8758,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[B]Mảnh Linh Thiêng",
+        "vi":"[B]Mảnh Kim Loại Linh Thiêng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8776,7 +8776,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[A]Mảnh Linh Thiêng",
+        "vi":"[A]Mảnh Kim Loại Linh Thiêng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8794,7 +8794,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[D]Mảnh Vô Tử",
+        "vi":"[D]Mảnh Kim Loại Vô Tử",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8812,7 +8812,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[C]Mảnh Vô Tử",
+        "vi":"[C]Mảnh Kim Loại Vô Tử",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8830,7 +8830,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[B]Mảnh Vô Tử",
+        "vi":"[B]Mảnh Kim Loại Vô Tử",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8848,7 +8848,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[A]Mảnh Vô Tử",
+        "vi":"[A]Mảnh Kim Loại Vô Tử",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9964,7 +9964,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trượng Ác Ma",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10504,7 +10504,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Ngọc Kỹ Năng Tân Tiến",
+        "vi":"Ngọc Kỹ Năng Nâng Cao",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10540,7 +10540,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngọc Nâng Cấp Nâng Cao [Cấp 1-30]",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10558,7 +10558,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngọc Nâng Cấp Nâng Cao [Cấp 40]",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10576,7 +10576,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngọc Nâng Cấp Nâng Cao [Cấp 50]",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10594,7 +10594,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngọc Nâng Cấp Nâng Cao [Cấp 60]",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10612,7 +10612,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngọc Nâng Cấp Nâng Cao [Cấp 70-100]",
         "ar":"",
         "it":"",
         "pl":"",
