--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4564,7 +4564,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cường Hóa Trang Bị",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4582,7 +4582,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trang Bị",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4600,7 +4600,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cánh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4618,7 +4618,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thú Cưỡi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4636,7 +4636,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tỷ Lệ Thành Công: {0}%",
         "ar":"",
         "it":"",
         "pl":"",
