--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4678,5 +4678,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "UI.windows.fortify.button.upgrade":{
+        "en":"Upgrade",
+        "fr":"Renforcer",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
