--- a/Translation/map.json
+++ b/Translation/map.json
@@ -520,5 +520,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "map.Muradin Harbor.name":{
+        "en":"Muradin Harbor",
+        "fr":"Port de Muradin",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
