To the End of 2021 (10)

--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4654,7 +4654,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nâng cấp yêu cầu {0}",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4672,7 +4672,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vui lòng chọn số lượng ngọc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4690,7 +4690,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nâng Cấp",
         "ar":"",
         "it":"",
         "pl":"",
