--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4330,7 +4330,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cướp Biển Rình Rập",
+        "vi":"Hải Tặc Rình Rập",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4348,7 +4348,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Mèo Cướp Biển",
+        "vi":"Mèo Hải Tặc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6220,7 +6220,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Seiya",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6238,7 +6238,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Athena",
         "ar":"",
         "it":"",
         "pl":"",
