--- a/Translation/map.json
+++ b/Translation/map.json
@@ -532,7 +532,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cảng Muradin",
         "ar":"",
         "it":"",
         "pl":"",
