--- a/Translation/item.json
+++ b/Translation/item.json
@@ -10241,6 +10241,42 @@
         "th":"",
         "id":"Semanggi berdaun empat"
     },
+    "item.40003.name":{
+        "en":"Daisy",
+        "fr":"Marguerite",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.40004.name":{
+        "en":"Cheese",
+        "fr":"Fromage",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.41000.name":{
         "en":"Daily Refresh",
         "fr":"Rafraichisseur de Quêtes",
