--- a/Translation/item.json
+++ b/Translation/item.json
@@ -8747,6 +8747,24 @@
         "th":"",
         "id":""
     },
+    "item.10108.name":{
+        "en":"Desert Manticore's Stinger",
+        "fr":"Dard de Manticore Désertique",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.10500.name":{
         "en":"[D]Carrion Metal Piece",
         "fr":"[D]Pièce de Métal Nécrophage",
