--- a/Translation/item.json
+++ b/Translation/item.json
@@ -8740,7 +8740,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Móc Rỉ Sét",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8758,7 +8758,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngòi Yết Sư Sa Mạc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10270,7 +10270,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hoa Cúc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10288,7 +10288,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phô Mai",
         "ar":"",
         "it":"",
         "pl":"",
