--- a/Translation/item.json
+++ b/Translation/item.json
@@ -10727,6 +10727,168 @@
         "th":"",
         "id":""
     },
+    "item.10500.description":{
+        "en":"Lv. 10 Gear Grade D Material",
+        "fr":"Matériaux d'Équipement Nv. 10 Grade D",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10501.description":{
+        "en":"Lv. 20 Gear Grade D Material",
+        "fr":"Matériaux d'Équipement Nv. 20 Grade D",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10502.description":{
+        "en":"Lv. 20 Gear Grade C Material",
+        "fr":"Matériaux d'Équipement Nv. 20 Grade C",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10503.description":{
+        "en":"Lv. 20 Gear Grade B Material",
+        "fr":"Matériaux d'Équipement Nv. 20 Grade B",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10504.description":{
+        "en":"Lv. 20 Gear Grade A Material",
+        "fr":"Matériaux d'Équipement Nv. 20 Grade A",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10505.description":{
+        "en":"Lv. 30 Gear Grade D Material",
+        "fr":"Matériaux d'Équipement Nv. 30 Grade D",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10506.description":{
+        "en":"Lv. 30 Gear Grade C Material",
+        "fr":"Matériaux d'Équipement Nv. 30 Grade C",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10507.description":{
+        "en":"Lv. 30 Gear Grade B Material",
+        "fr":"Matériaux d'Équipement Nv. 30 Grade B",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10508.description":{
+        "en":"Lv. 30 Gear Grade A Material",
+        "fr":"Matériaux d'Équipement Nv. 30 Grade A",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "craft.levels.primary":{
         "en":"Primary",
         "fr":"Débutant",
