--- a/Translation/map.json
+++ b/Translation/map.json
@@ -538,5 +538,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "map.Pirate Camp.name":{
+        "en":"Pirate Camp",
+        "fr":"Camp Pirate",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
