--- a/Translation/item.json
+++ b/Translation/item.json
@@ -8765,6 +8765,114 @@
         "th":"",
         "id":""
     },
+    "item.10109.name":{
+        "en":"Wisdom Orb",
+        "fr":"Orbe de Sagesse",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10110.name":{
+        "en":"Greed Crystal",
+        "fr":"Cristal de Cupidité",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10111.name":{
+        "en":"Pioneer Shield",
+        "fr":"Bouclier de Pionnier",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10112.name":{
+        "en":"Balrog Flame",
+        "fr":"Flame de Balrog",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10113.name":{
+        "en":"Strang Eye",
+        "fr":"Oeil Etrange",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10114.name":{
+        "en":"Lava Heart",
+        "fr":"Coeur de Lave",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.10500.name":{
         "en":"[D]Carrion Metal Piece",
         "fr":"[D]Pièce de Métal Nécrophage",
