--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -291,7 +291,7 @@
         "en":"This is your raw attack. You should not rely on it to know your strength.<br>It affects your normal attacks and skills damage, and also affects your healing power.",
         "fr":"C'est votre puissance brute. Vous ne devriez pas vous baser sur ça pour connaitre votre puissance.<br>Elle affecte les dégâts de vos attaques de base et de vos skills, et aussi de vos soins.",
         "es":"",
-        "ch":"",
+        "ch":"這是你的基礎攻擊.這并不代表你的真實實力.<br>它影響你的普通攻擊和技能傷害，以及你的治療能力.",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -345,7 +345,7 @@
         "en":"This is your raw defence. You should not rely on it to know your ability to take a hit. It reduces the damage caused by your opponents.",
         "fr":"C'est votre défense brute. Vous ne devriez pas vous baser sur ça pour connaitre votre résistance.<br>Elle réduit les dégâts causés par votre opposant.",
         "es":"",
-        "ch":"",
+        "ch":"這是你的基礎防禦能力。它并不完全代表你能承受多少攻擊. 它會減少敵人對你造成的傷害.",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -399,7 +399,7 @@
         "en":"Increases the base damages done by your attack by X%",
         "fr":"Augmente les dégâts causés par vos attaques de X%",
         "es":"",
-        "ch":"",
+        "ch":"增加你攻擊的基礎傷害值 X%",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -453,7 +453,7 @@
         "en":"Increases your base defence by X%",
         "fr":"Augmente votre défense de base de X%",
         "es":"",
-        "ch":"",
+        "ch":"增加你的基礎防禦力 X%",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -507,7 +507,7 @@
         "en":"Increases your number of normal attacks per seconds by X%",
         "fr":"Augmente votre nombre d'attaque par seconde de X%",
         "es":"",
-        "ch":"",
+        "ch":"每秒鐘增加 X% 的普通攻擊次數",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -561,7 +561,7 @@
         "en":"Increases the base damages done by your spells by X%",
         "fr":"Augmente les dégâts de base de vos compétences de X%",
         "es":"",
-        "ch":"",
+        "ch":"增加你技能的基礎傷害值 X%",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -615,7 +615,7 @@
         "en":"Increases the chance of your normal attacks hitting an enemy by X%.",
         "fr":"Augmente les chances de vos attaques normales de toucher leur cible de X%",
         "es":"",
-        "ch":"",
+        "ch":"增加你普通攻擊命中敵人的機率 X%",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -669,7 +669,7 @@
         "en":"Increases the chance of your Skills hitting an enemy by X%.",
         "fr":"Augmente les chances de vos compétences de toucher leur cible de X%",
         "es":"",
-        "ch":"",
+        "ch":"增加你技能命中敵人的機率 X%",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -723,7 +723,7 @@
         "en":"Increases your chances of dodging normal attacks. Dodging a normal attack cancels its effects. Countered by ACC.",
         "fr":"Augmente vos chances d'esquiver les attaques normales. Esquiver une attaque normale annule ses effets. Contré par la PRE",
         "es":"",
-        "ch":"",
+        "ch":"增加你閃避敵人普通攻擊的機率.並免疫普通攻擊的效果.閃避效果會被敵人的命中加成所削減.",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -777,7 +777,7 @@
         "en":"Increases your chances of dodging a skill. Dodging a normal attack cancels its effects. Countered by Skill ACC.",
         "fr":"Augmente vos chances d'esquiver les compétences. Esquiver une compétence annule ses effets. Contré par la PRE Comp",
         "es":"",
-        "ch":"",
+        "ch":"增加你閃避敵人技能的概率.並免疫技能攻擊的效果.閃避效果會被敵人的技能命中加成所削弱.",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -831,7 +831,7 @@
         "en":"Increases your critical strikes chances of your normal attacks by X%. Countered by CRIT EVA.",
         "fr":"Augmente vos chances de coup critique de vos attaque normale de X%. Contré par la Esquive CRIT",
         "es":"",
-        "ch":"",
+        "ch":"增加你普通攻擊的暴擊機率 X%. 暴擊加成會被暴擊閃避所削弱.",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -885,7 +885,7 @@
         "en":"Increases your critical strikes chances of your skills by X%. Countered by Skill CRIT EVA.",
         "fr":"Augmente vos chances de coup critique de vos compétence de X%. Contré par la Esquive Comp CRIT",
         "es":"",
-        "ch":"",
+        "ch":"增加你技能的暴擊命中 X%. 技能暴擊命中會被技能暴擊閃避所削弱.",
         "kr":"",
         "ru":"",
         "tr":"",
